package fr.univ.bordeaux.ui;

import fr.univ.bordeaux.application.match.MoveDtO;
import fr.univ.bordeaux.application.match.ReadOnlyMatch;
import java.util.List;

/**
 * Unified interface defining possible interactions in the Agon game.
 *
 * <p>This interface aggregates both:
 *
 * <ul>
 *   <li>Actions the player can perform (e.g., {@code tryMove}, {@code undo}).
 *   <li>Methods for updating the display (e.g., {@code updateBoard}).
 * </ul>
 *
 * <p>It serves as the contract between the Presentation layer (UI) and the Application layer
 * (Engine).
 */
public interface GameUserInterface {

  /**
   * to check if the UI is running and if the Match is running to close the entire application.
   *
   * @return true | false
   */
  boolean isRunning();

  /**
   * Quit the current game and closes the application. May trigger Reader prompt to save before
   * exiting.
   */
  void quit();

  /**
   * Updates the game board display and match information.
   *
   * @param match {@link ReadOnlyMatch} the current match state.
   */
  void onMatchUpdate(ReadOnlyMatch match);

  /**
   * Displays an informational message to the user.
   *
   * @param message The content of the message.
   */
  void showMessage(String message);

  /**
   * Displays a critical error or warning message.
   *
   * @param error The content of the error.
   */
  void showError(String error);

  /** Display the help menu into terminal. */
  void showHelp();

  /**
   * Show warning messages into the sub UI object.
   *
   * @param msg {@link String}
   */
  void showWarn(String msg);

  /**
   * Show information into the sub UI object.
   *
   * @param msg {@link String}
   */
  void showInfo(String msg);

  /**
   * Retrieve from ui/CLi some text.
   *
   * @return {@link String}
   */
  String getUserInput();

  /**
   * To display Moves history.
   *
   * @param moves {@link List}
   */
  void displayHistory(List<MoveDtO> moves);
}
